Change initial structure by renaming JS files; starting HTML & CSS design

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bankoo</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Bankoo</h1>
+    </header>
+    <main>
+        <div class="left-container">
+            <h3>Liste des clients</h3>
+            <div class="client-list">
+
+            </div>
+            <div class="add-client">
+                <h4>Ajouter un client</h4>
+                    <input type="text" id="client-name" placeholder="Nom du client" required>
+                    <button type="submit">Ajouter</button>
+            </div>
+        </div>
+
+        <div class="right-container">
+            <h3>Détails du client</h3>
+            
+        </div>
+    </main>
 </body>
 <script src="assets/js/script.js"></script>
 </html>
